crates/cobrust-lsp/tests/snapshots/wave_4_e2e__snapshot_call_hierarchy_outgoing_calls_multi.snap
---
source: crates/cobrust-lsp/tests/wave_4_e2e.rs
expression: calls_sorted
snapshot_kind: text
---
[
  {
    "to": {
      "name": "a",
      "kind": 12,
      "uri": "file:///test.cb",
      "range": {
        "start": {
          "line": 1,
          "character": 0
        },
        "end": {
          "line": 1,
          "character": 12
        }
      },
      "selectionRange": {
        "start": {
          "line": 0,
          "character": 3
        },
        "end": {
          "line": 0,
          "character": 4
        }
      }
    },
    "fromRanges": [
      {
        "start": {
          "line": 5,
          "character": 11
        },
        "end": {
          "line": 5,
          "character": 14
        }
      }
    ]
  },
  {
    "to": {
      "name": "b",
      "kind": 12,
      "uri": "file:///test.cb",
      "range": {
        "start": {
          "line": 3,
          "character": 0
        },
        "end": {
          "line": 3,
          "character": 12
        }
      },
      "selectionRange": {
        "start": {
          "line": 2,
          "character": 3
        },
        "end": {
          "line": 2,
          "character": 4
        }
      }
    },
    "fromRanges": [
      {
        "start": {
          "line": 5,
          "character": 17
        },
        "end": {
          "line": 5,
          "character": 20
        }
      }
    ]
  }
]
