crates/cobrust-lsp/tests/snapshots/wave_4_e2e__snapshot_call_hierarchy_prepare_item.snap
---
source: crates/cobrust-lsp/tests/wave_4_e2e.rs
expression: items
snapshot_kind: text
---
[
  {
    "name": "target",
    "kind": 12,
    "uri": "file:///test.cb",
    "range": {
      "start": {
        "line": 1,
        "character": 0
      },
      "end": {
        "line": 1,
        "character": 12
      }
    },
    "selectionRange": {
      "start": {
        "line": 0,
        "character": 3
      },
      "end": {
        "line": 0,
        "character": 9
      }
    }
  }
]
