crates/cobrust-lsp/tests/snapshots/wave_4_e2e__snapshot_inlay_let_type_hint.snap
---
source: crates/cobrust-lsp/tests/wave_4_e2e.rs
assertion_line: 341
expression: hints
snapshot_kind: text
---
[
  {
    "position": {
      "line": 0,
      "character": 5
    },
    "label": ": i64",
    "kind": 1,
    "paddingLeft": false,
    "paddingRight": false,
    "data": {
      "kind": "type",
      "name": "x"
    }
  }
]
