crates/cobrust-lsp/tests/snapshots/wave_4_e2e__snapshot_semantic_tokens_empty_source.snap
---
source: crates/cobrust-lsp/tests/wave_4_e2e.rs
expression: tokens
snapshot_kind: text
---
{
  "data": []
}
