crates/cobrust-lsp/tests/snapshots/wave_4_e2e__snapshot_semantic_tokens_three_line_program.snap
---
source: crates/cobrust-lsp/tests/wave_4_e2e.rs
expression: tokens
snapshot_kind: text
---
{
  "data": [
    0,
    0,
    3,
    0,
    0,
    0,
    4,
    1,
    5,
    0,
    0,
    3,
    3,
    7,
    0,
    0,
    4,
    1,
    4,
    0,
    0,
    2,
    2,
    2,
    0,
    1,
    0,
    3,
    0,
    0,
    0,
    4,
    1,
    5,
    0,
    0,
    3,
    3,
    7,
    0,
    0,
    4,
    1,
    4,
    0,
    0,
    2,
    4,
    1,
    0,
    1,
    0,
    3,
    0,
    0,
    0,
    4,
    1,
    5,
    0,
    0,
    2,
    1,
    4,
    0,
    0,
    2,
    1,
    5,
    0,
    0,
    2,
    1,
    4,
    0,
    0,
    2,
    1,
    2,
    0
  ]
}
